add update product (#10)
